cluster-home/operations/kube-tools/kyverno/policies/inject-timezone.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-timezone
  annotations:
    policies.kyverno.io/title: Inject timezone
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects an initContainer to Pods and setup TZ
      environment variable so the container will have the correct
      time.
spec:
  generateExisting: true
  rules:
    - name: inject-timezone
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - name: provide-timezone
                image: quay.io/k8tz/k8tz:0.20.0@sha256:361628e53fc891ed42a31b32842bfd95e3beef9c98cab526ef11be841e6f96ac
                imagePullPolicy: IfNotPresent
                resources:
                  requests:
                    cpu: 10m
                    memory: 100Mi
                volumeMounts:
                  - mountPath: /mnt/zoneinfo
                    name: timezone
                args:
                  - bootstrap
            containers:
              - (name): "*"
                volumeMounts:
                  - mountPath: /etc/localtime
                    name: timezone
                    readOnly: true
                    subPath: &timezone ${TIMEZONE}
                  - mountPath: /usr/share/zoneinfo
                    name: timezone
                    readOnly: true
                env:
                  - name: TZ
                    value: *timezone
            volumes:
              - name: timezone
                emptyDir: {}
